--- a/WelcomeView.html
+++ b/WelcomeView.html
@@ -16,7 +16,7 @@
 
             PopUp.confirm("Are you ok?", (e:String)=>{
 
-                this.answer.innerHTML = e==="submit" ? "很好" : "一般"
+                this.answer.innerHTML = e==="submit" ? "很好" : "一般";
 
             },{profile:{
                 submitText:"很好",
